# helio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  commitlint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  ghcr-publish.yml  release.yml  renovate.yml  security.yml
apps/api/: openapi.json  package.json  vitest.config.ts
apps/api/src/: app.ts  env.ts  observability.ts  server.ts  types.ts
apps/api/tests/: app.test.ts  contract.test.ts  email-webhook.test.ts  shopify-webhook.test.ts  sms-webhook.test.ts  stripe-webhook.test.ts
apps/cli/: package.json  vitest.config.ts
apps/cli/src/: main.ts  registry.ts
apps/cli/tests/: bundle.test.ts  envfile.test.ts  secrets.test.ts  self-update.test.ts  selfhost-compose.test.ts  shortcut.test.ts  state-health.test.ts  updater-script.test.ts
apps/docs/: eslint.config.mjs  package.json  tsconfig.json
apps/docs/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/docs/components/: mdx.tsx
apps/docs/lib/: layout.shared.tsx  (+1 more)
apps/ingest/: package.json  vitest.config.ts
apps/intelligence/: README.md  pyproject.toml
apps/intelligence/src/helio_intelligence/: __init__.py  app.py  copilot_api.py  generation_api.py  logging.py  models_api.py  scoring_api.py  settings.py  vault.py
apps/intelligence/src/helio_intelligence/agent/: __init__.py  copilot.py  email_schema.py  journey_schema.py  naming.py  nl_email.py  nl_journey.py  nl_segment.py  scope.py  segment_schema.py  tools.py
apps/intelligence/src/helio_intelligence/data/: __init__.py  db.py  repository.py
apps/intelligence/src/helio_intelligence/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  fake.py  openai_compatible.py  org_provider.py  types.py
apps/intelligence/src/helio_intelligence/mcp_server/: __init__.py  __main__.py  server.py
apps/intelligence/src/helio_intelligence/model_runtime/: __init__.py  http_model.py  runner.py  sandbox.py  storage.py  validator.py
apps/intelligence/src/helio_intelligence/scoring/: __init__.py  clickhouse.py  features.py  model.py  send_time.py  service.py
apps/intelligence/tests/: test_churn_custom_scoring.py  test_copilot.py  test_data_isolation.py  test_health.py  test_llm_gateway.py  test_mcp_server.py  test_model_runtime.py  test_nl_generation.py  test_org_provider.py  test_scoring.py  test_vault.py
apps/tracking/: package.json  vitest.config.ts
apps/web/: eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/workers/: package.json  vitest.config.ts
docs/: api.md  architecture.md  sso.md  threat-model.md
docs/adr/: 0001-monorepo-turborepo-pnpm-uv.md  0002-polyglot-ts-python.md  0003-postgres-rls-tenancy.md  0004-better-auth-kernel.md  0005-temporal-orchestration.md  0006-agpl-license.md  0007-event-plane.md  0008-hono-openapi-gateway.md  0009-commit-and-release-flow.md  0010-ingestion-pipeline.md  0011-campaign-delivery.md  0012-journey-execution.md  0013-sso-oidc.md  0014-scim-provisioning.md  0015-gateway-api-keys.md  0016-docs-site-fumadocs.md  0017-webhook-tenant-resolution.md  0018-install-distribution-and-cli.md  0019-org-credential-vault.md  0020-local-backup-architecture.md  0021-byo-churn-model.md
docs/marketing/: README.md  linkedin-post.md  medium-article.md
docs/runbooks/: local-dev.md  production-ops.md  wsl-memory.md
infra/compose/: docker-compose.selfhost.yml  docker-compose.yml  selfhost.env.template
infra/docker/: api.Dockerfile  backup.Dockerfile  ingest.Dockerfile  intelligence.Dockerfile  migrate.Dockerfile  tracking.Dockerfile  updater.Dockerfile  web.Dockerfile  workers.Dockerfile
infra/k6/: README.md  ingest.js
infra/observability/: otel-collector.yaml  prometheus.yaml
scripts/: install.ps1  install.sh
scripts/release/: build-binaries.sh  build-bundle.ts
(+433 files in other folders)
