[project]
name = "helio-intelligence"
version = "0.0.0"
description = "Helio's intelligence plane: AI copilot, scoring, segment compute, and the MCP server."
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "prometheus-client>=0.25.0",
    "openai>=1.50",
    "anthropic>=0.39",
    "asyncpg>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest-asyncio>=0.24",
    "testcontainers>=4.8",
    "asyncpg-stubs>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helio_intelligence"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=helio_intelligence --cov-report=term --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
