[project]
name = "helio-intelligence"
version = "0.0.0"
description = "Helio's intelligence plane: AI copilot, scoring, segment compute, and the MCP server."
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "prometheus-client>=0.25.0",
    "openai>=1.50",
    "anthropic>=0.39",
    "asyncpg>=0.30",
    "mcp>=1.2",
    "httpx>=0.27",
    "numpy>=2.1",
    "scikit-learn>=1.5",
    "cryptography>=46.0.7,<47",
    "onnxruntime>=1.20,<1.21",
    "xgboost>=2.1,<2.2",
    # FastAPI needs this for multipart form parsing (the model upload route).
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest-asyncio>=0.24",
    "testcontainers>=4.8",
    "asyncpg-stubs>=0.30",
    "skl2onnx>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helio_intelligence"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
strict = true
files = ["src"]

# scikit-learn ships no type information; we wrap it behind our own typed
# surface (scoring/model.py) and keep the rest of the codebase strict.
[[tool.mypy.overrides]]
module = ["sklearn.*", "onnxruntime.*", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=helio_intelligence --cov-report=term --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
# Process entrypoints wire real services (DB, LLM, stdio) and are
# exercised in deployment, not unit tests — like the TS server.ts files.
omit = ["*/__main__.py"]
